--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			
 			</header>
 			<figure>
-				<img src="How-to-get-verified-on-TikTok.jpg" alt="image_space">
+				<img src="How-to-get-verified-on-TikTok.jpg" alt="image_space" width="500px" height="auto">
 				<figcaption>Logo TikTok.</figcation>
 			</figure>
 			<marquee>
